# CudaNBodySimulation

./: .gitignore  CMakeLists.txt  README.md
glad/: CMakeLists.txt  glad.c
imgui/: CMakeLists.txt  imconfig.h
include/: shader_program.hpp  utils.hpp
include/glad/: glad.h
shaders/: body_fragment.glsl  body_vertex.glsl  circle_fragment.glsl  circle_vertex.glsl  fragment_shader.glsl  highlighter_fragment.glsl  highlighter_vertex.glsl  test_shader_fragment.glsl  test_shader_vertex.glsl  vertex_shader.glsl
src/: CMakeLists.txt  body.hpp  camera.cpp  camera.hpp  graphics_settings.hpp  main copy.cu  main.cpp  nbody_simulation.cpp  nbody_simulation.hpp  nbody_simulation_cuda.cu  shader.hpp  shader_program.hpp  shapes.hpp  utils.hpp  vertex.hpp
